--- a/complete/customerServiceWrite.html
+++ b/complete/customerServiceWrite.html
@@ -7,17 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
-<style>
-      .frame {
-            max-width: 900px; /* Set maximum width for the form container */
-            margin: 0 auto; /* Center the form container horizontally */
-        }
 
-        .form-label {
-            font-weight: bold;
-        }
-</style>
 <body>
     <div class="frame">
         <h1><strong>고객센터</strong></h1>
@@ -45,7 +37,7 @@
         <div class="text-center">
             <button type="submit" class="btn btn-primary">Submit</button>
         </div>
-          </form>
+        </form>
 
 
 
@@ -54,6 +46,7 @@
 
 
     </div>
-    
+
 </body>
+
 </html>
