--- a/complete/jobPosting.html
+++ b/complete/jobPosting.html
@@ -6,49 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
-<style>
-    .job_posting {
-        color: black;
-        font-weight: bold;
-        font-size: 25px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-top: 10px;
-        margin-right: 800px;
-    }
-
-    .job_posting.images {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 3px;
-    margin-left: 740px;
-    }
-
-    .job_posting.images a {
-    display: inline-block;
-    margin: 10px;
-    }
-
-    .job_posting.images a img {
-    width: 200px; /* 원하는 이미지 너비로 설정 */
-    height: auto; /* 높이 자동 조정 */
-    } 
-
-    .button{
-        width: 100;
-        height: 100;
-        font-size: 16;
-        text-align: center;
-        margin-top: 120px;
-        margin-top: 120px;
-    }
-
-
-
-</style>
 
 <body>
     <!--상단바-->
@@ -86,10 +45,10 @@
     <hr style="border-color: #000000;">
     <!--구분선-->
 
-    <div class="job_posting">채용 공고</div>
+    <div class="job-posting">채용 공고</div>
 
 
-    <div class="job_posting images">
+    <div class="job-posting images">
         <a href="http://www.naver.com" class="rounded_image">
             <img src="/images/파워링크사진.png" />
         </a>
@@ -104,7 +63,7 @@
         </a>
     </div>
 
-    <div class="job_posting images" style="margin-top: 30px;">
+    <div class="job-posting images" style="margin-top: 30px;">
         <a href="http://www.naver.com" class="rounded_image">
             <img src="/images/파워링크사진.png" />
         </a>
@@ -119,10 +78,10 @@
         </a>
     </div>
 
-    <div class="button">
+    <div class="job-button">
         <button type="button" class="btn btn-secondary Prev">Prev</button>
         <button type="button" class="btn btn-secondary Next">Next</button>
-      </div>
+    </div>
 </body>
 
 </html>
